[package]

name = "conduit-log-requests"
version = "0.6.2"
authors = ["wycats@gmail.com",
           "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT"
description = "Middleware which logs all incoming requests to a conduit-based server"
repository = "https://github.com/conduit-rust/conduit-log-requests"

[dependencies]
conduit = "0.6"
conduit-middleware = "0.6"
time = "0.1.0"
log = "0.1.0"

[dev-dependencies]
conduit-test = "0.6"
