[package]

name = "conduit-log-requests"
version = "0.7.2"
authors = ["wycats@gmail.com",
           "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT"
description = "Middleware which logs all incoming requests to a conduit-based server"
repository = "https://github.com/conduit-rust/conduit-log-requests"

[dependencies]
conduit = "0.7"
conduit-middleware = "0.7"
time = "0.1.0"
log = "0.2"

[dev-dependencies]
conduit-test = "0.7"
